# all-media-downloader

./: .env.example  .gitignore  BOTFATHER.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  SECURITY.md  docker-compose.yml  pyproject.toml  requirements.txt  run.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
bot/: __init__.py  config.py  main.py
bot/handlers/: download.py  start.py
bot/keyboards/: menus.py
bot/services/: downloader.py  history.py  media_detect.py  rate_limit.py  session.py  url_tokens.py
bot/utils/: cookies.py  ffmpeg.py  helpers.py  instance_lock.py
data/: .gitignore
docs/: ARCHITECTURE.md  COOKIES.md  DEPLOYMENT.md  GITHUB_SETUP.md  HEALTH.md  LOCAL_BOT_API.md
docs/ci-backup/: ci.yml
scripts/: bot_health_server.py  run.ps1  setup.ps1
